publish problem sets for 304, 363 	modified:   S23/304/304S23PS.HTM 	new file:   S23/304/Stone_T_Lines_Problems2p1and2p6.pdf 	modified:   S23/363/363S23PS.HTM

--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/20/2023 4:25 pm) 
+                              >(Last update: 4/21/2023 9:45 pm) 
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -80,6 +80,48 @@ DO {
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+
+   <!-- PS#  -->                  <TD align="right" valign="top">
+12
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        4/21
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        4/28
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/102797306/download?download_frd=1"
+        >2/14</a>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+Read this classroom slides on transmission lines.      <br>&nbsp; 
+                                                       <br>&nbsp;
+        Look over these application notes from Texas   <br>&nbsp;
+        Instruments on transmission lines.  The section<br>&nbsp;
+        in AN-807 on the "tabular method" may optionally<br>&nbsp;
+		be helpful on this homework assignment but is   <br>&nbsp;
+		not necessary to solve the homework problems.   <br>&nbsp;
+        <a href="http://www.ti.com/lit/an/snla026a/snla026a.pdf"
+        >AN-806</a>, and 
+        <a href="http://www.ti.com/lit/an/snla027b/snla027b.pdf"
+        >AN-807</a>, and 
+        <a href="http://www.ti.com/lit/an/snla028/snla028.pdf"
+        >AN-808</a>.                                   <br>&nbsp;
+                                                       <br>&nbsp;
+        Do <a href="./Stone_T_Lines_Problems2p1and2p6.pdf"
+		><DO>2.1 and 2.1</DO></a> (click blue link).   <br>&nbsp;
+                                                       <br>&nbsp;
+        Optional: <a href=
+        "http://www.antenna-theory.com/tutorial/txline/transmissionline.php"
+                 >A transmission line theory tutorial</a><br>&nbsp;
+        Optional:  Video on <a href=
+        "https://www.youtube.com/watch?v=BijMGKbT0Wk"
+                               >VSWR and return loss</a>   <br>&nbsp;
+		Optional:  Video on <a href="https://www.youtube.com/watch?v=3W5ne1DMXYY"
+					      >Crossneedle VSWR meters</a> 
+        
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
