--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   4/15/2023 11:25 pm)
+                              >(Last update:   4/21/2023 9:55 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -82,6 +82,29 @@ PS                                                       </small>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+13
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        4/21<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/3642167/assignments/40957630"
+		>4/28</a><br>        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		"https://dordt.instructure.com/files/192171560/download?download_frd=1"
+		>12/05</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Angle modulation basics, FM, PM       <br>&nbsp;
+        Read Ch 4 Sec. 4.2, 4.3, 4.4                             <br>&nbsp;
+		                                               <br>&nbsp;
+        Do<DO> 4.4, 4.5, 4.20</DO>                           <br>&nbsp;
+		                                               <br>&nbsp;
+		Note textbook errata in <a href=
+		"https://dfdeboer.github.io/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_187"
+		                       >Problem 4.20</a>		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
 12
