--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/21/2023 9:45 pm) 
+                              >(Last update: 4/21/2023 10:10 pm) 
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -89,8 +89,9 @@ DO {
         4/21
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        4/28
-        
+        <a href=
+		"https://dordt.instructure.com/courses/3642050/assignments/40957636"
+		>4/28</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
         "https://dordt.instructure.com/files/102797306/download?download_frd=1"
@@ -111,7 +112,7 @@ Read this classroom slides on transmission lines.      <br>&nbsp;
         >AN-808</a>.                                   <br>&nbsp;
                                                        <br>&nbsp;
         Do <a href="./Stone_T_Lines_Problems2p1and2p6.pdf"
-		><DO>2.1 and 2.1</DO></a> (click blue link).   <br>&nbsp;
+		><DO>2.1 and 2.2</DO></a> (click blue link).   <br>&nbsp;
                                                        <br>&nbsp;
         Optional: <a href=
         "http://www.antenna-theory.com/tutorial/txline/transmissionline.php"
