Posting the video for today's EGR 304 lab demo of t-lines 	modified:   S23/304/304S23DN.HTM

--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -358,7 +358,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=L-eAgvLZ8Bw">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=UwVEIvlqcWo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment-->T-lines: examples discussed<!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->T-lines: examples discussed. &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; T-line <a href="https://www.youtube.com/watch?v=hOAZSdZePhc">Lab Demo</a> (Video)<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Project II Report Due Wednesday, 4/26</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 5/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
