--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -347,18 +347,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0424.pdf"><!-- -->
-	  4/24<!-- --></a><!-- --><br><!-- -><a href=
+	  4/24<!-- --></a><!-- --><br><!-- --><a href=
       "https://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0426.pdf"><!-- -->
-      4/26<!-- -></a><!-- --><br><!-- -><a href=
+      4/26<!-- --></a><!-- --><br><!-- -><a href=
       "https://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0428.pdf"><!-- -->
       4/28<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=UFaLTodO2Go">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=L-eAgvLZ8Bw">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=rY97DgXzx0s">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=UwVEIvlqcWo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->NTSC analog color video, color image formats and image compression<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><b>Ch 5, Probability and Random Processes</b>, Basic definitions <!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 5/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
