Slides, video for 304, 363 today, EGR 363 PS, some files for EGR 322, 323 that are not fully ready yet. 	new file:   F20/322/322F20DN_Infinity.HTM 	new file:   S21/323/323S21DN_Infinity.HTM 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM 	modified:   S23/363/363S23PS.HTM 	new file:   S23/363/UnionSymbol_cup.png

--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -95,7 +95,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  &nbsp;<!-- --</a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       &nbsp;<!-- --</a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0113.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0113.pdf"><!-- -->
       1/13<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --><br>
@@ -108,11 +108,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 1/16 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0116.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0116.pdf"><!-- -->
 	  1/16<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0118.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0118.pdf"><!-- -->
       1/18<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0120.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0120.pdf"><!-- -->
       1/20<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=nn6D80iOrY8">V</A><!-- --><br>
@@ -126,11 +126,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 1/23 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0123.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0123.pdf"><!-- -->
 	  1/23<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0125.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0125.pdf"><!-- -->
       1/25<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0127.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0127.pdf"><!-- -->
       1/27<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=OfeWullAIic">V</A><!-- --><br>
@@ -143,11 +143,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 1/30 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0130.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0130.pdf"><!-- -->
 	  1/30<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0201.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0201.pdf"><!-- -->
       2/01<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0203.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0203.pdf"><!-- -->
       2/03<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=j-M-vLg5mmA">V</A><!-- --><br>
@@ -160,11 +160,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 2/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0206.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0206.pdf"><!-- -->
 	  2/06<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0208.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0208.pdf"><!-- -->
       2/08<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0210.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0210.pdf"><!-- -->
       2/10<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=YC97Ru7ilnE">V</A><!-- --><br>
@@ -177,11 +177,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 2/13 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0213.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0213.pdf"><!-- -->
 	  2/13<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0215.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0215.pdf"><!-- -->
       2/15<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0217.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0217.pdf"><!-- -->
       2/17<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=8q68aVovt_I">V</A><!-- --><br>
@@ -194,11 +194,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 2/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0220_.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0220_.pdf"><!-- -->
 	  2/20<!-- --></a><!-- --><br><!-- -><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0217.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0217.pdf"><!-- -->
       2/22<!-- -></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0224.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0224.pdf"><!-- -->
       2/24<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=eYHPJyazRjQ">V</A><!-- --><br>
@@ -211,11 +211,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 2/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0227.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0227.pdf"><!-- -->
 	  2/27<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0301.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0301.pdf"><!-- -->
       3/01<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0303.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0303.pdf"><!-- -->
       3/03<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=ZcDF1mcICZI">V</A><!-- --><br>
@@ -228,11 +228,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 3/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0306.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0306.pdf"><!-- -->
 	  3/06<!-- -></a><!-- --><br><!-- -><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0308.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0308.pdf"><!-- -->
       3/08<!-- -></a><!-- --><br><!-- -><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0310.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0310.pdf"><!-- -->
       3/10<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=x0ZWvFjVdA4">V</A><!-- --><br>
@@ -245,11 +245,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 3/13 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0313.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0313.pdf"><!-- -->
 	  3/13<!-- -></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0315.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0315.pdf"><!-- -->
       3/15<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0317.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0317.pdf"><!-- -->
       3/17<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=gA0f7kFJxuY">V</A><!-- --><br>
@@ -262,11 +262,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 3/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0320.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0320.pdf"><!-- -->
 	  3/20<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0322.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0322.pdf"><!-- -->
       3/22<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0324.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0324.pdf"><!-- -->
       3/24<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=I7OJ36O6GuQ">V</A><!-- --><br>
@@ -279,11 +279,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 3/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0327.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0327.pdf"><!-- -->
 	  3/27<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0329.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0329.pdf"><!-- -->
       3/29<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0331.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0331.pdf"><!-- -->
       3/31<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=SsSOc1fWUq4">V</A><!-- --><br>
@@ -296,11 +296,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 4/03 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0403.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0403.pdf"><!-- -->
 	  4/03<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0405.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0405.pdf"><!-- -->
       4/05<!-- --></a><!-- --><br><!-- -><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0407.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0407.pdf"><!-- -->
       4/07<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Ulx7i3onQpY">V</A><!-- --><br>
@@ -313,11 +313,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 4/10 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0410.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0410.pdf"><!-- -->
 	  4/10<!-- -></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0412.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0412.pdf"><!-- -->
       4/12<!-- --></a><!-- --><br><!-- -><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0414.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0414.pdf"><!-- -->
       4/14<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=I-OkHqm48jc">V</A><!-- --><br>
@@ -330,11 +330,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 4/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0417.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0417.pdf"><!-- -->
 	  4/17<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0419.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0419.pdf"><!-- -->
       4/19<!-- --></a><!-- --><br><!-- --><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0421.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0421.pdf"><!-- -->
       4/21<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=tsEwE1AOzOE">V</A><!-- --><br>
@@ -347,28 +347,28 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 4/24 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0424.pdf"><!-- -->
-	  4/24<!-- --></a><!-- --><br><!-- -><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0426.pdf"><!-- -->
-      4/26<!-- -></a><!-- --><br><!-- -><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0428.pdf"><!-- -->
-      4/28<!-- -></a><!-- --></td>
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0424.pdf"><!-- -->
+	  4/24<!-- --></a><!-- --><br><!-- --><a href=
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0426.pdf"><!-- -->
+      4/26<!-- --></a><!-- --><br><!-- --><a href=
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0428.pdf"><!-- -->
+      4/28<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=ZIgEVQoGsAU">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=L-eAgvLZ8Bw">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=UwVEIvlqcWo">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=62lJNl3tM9E">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=QnQ0JbOijMk">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment-->T-lines: examples discussed<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Project II Report Due Wednesday, 4/05</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Monday    -->&nbsp;<!--start comment-->T-lines: examples discussed&nbsp;&nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; T-line <a href="https://www.youtube.com/watch?v=hOAZSdZePhc">Lab Demo</a> (Video)<!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Intro: Cybersecurity, basic terms &nbsp;&nbsp; &nbsp; &nbsp; <font color=grey>Project II Report Due Wed, 4/26</font><!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment-->Symmetric-key and public-key cryptography<!--end comment--></td>  
    </TR><!-- Week of 5/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0501.pdf"><!-- -->
+	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0501.pdf"><!-- -->
 	  5/01<!-- --></a><!-- --><br><!-- -><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0503.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0503.pdf"><!-- -->
       5/03<!-- --></a><!-- --><br><!-- -><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0505.pdf"><!-- -->
+      "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0505.pdf"><!-- -->
       5/05<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=6mWogwz0NbQ">V</A><!-- --><br>
