--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -349,17 +349,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/260225221/download?download_frd=1"><!-- -->
 	  4/24<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/260448121/download?download_frd=1"><!-- -->
-      4/26<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      4/28<!-- -></a><!-- --></td>
+      4/26<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/260614035/download?download_frd=1"><!-- -->
+      4/28<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=UFaLTodO2Go">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=rY97DgXzx0s">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=UwVEIvlqcWo">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=QnQ0JbOijMk">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->NTSC analog color video, color image formats and image compression<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><b>Ch 5, Probability and Random Processes</b>, Basic definitions <!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Probabilities of <img src="UnionSymbol_cup.png" alt="&cup;">, &cap;, subsets, conditional probability, Bayes' thm<!--end comment--></td>  
    </TR><!-- Week of 5/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
