--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -82,6 +82,25 @@ PS                                                       </small>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 14
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        4/28
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        5/05<!--<a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/32131362"
+		>5/05</a>
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/207696301/download?download_frd=1"
+        >5/06</a>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Probabiity and Random processes, Beyes'<br>&nbsp;
+		Read: Section 5.1                              <br>&nbsp;
+		                                               <br>&nbsp;
+        Do <DO>5.1, 5.2, 5.3, 5.5</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
 13
