--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -350,17 +350,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/260238317/download?download_frd=1"><!-- -->
 	  4/24<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/260469406/download?download_frd=1"><!-- -->
-      4/26<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      4/28<!-- -></a><!-- --></td>
+      4/26<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/260627955/download?download_frd=1"><!-- -->
+      4/28<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=ZIgEVQoGsAU">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=62lJNl3tM9E">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=UwVEIvlqcWo">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=QnQ0JbOijMk">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment-->T-lines: examples discussed. &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; T-line <a href="https://www.youtube.com/watch?v=hOAZSdZePhc">Lab Demo</a> (Video)<!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->T-lines: examples discussed. &nbsp;&nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; T-line <a href="https://www.youtube.com/watch?v=hOAZSdZePhc">Lab Demo</a> (Video)<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Intro: Cybersecurity, basic terms &nbsp; &nbsp; &nbsp; &nbsp; <font color=grey>Project II Report Due Wed, 4/26</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Symmetric-key and public-key cryptography<!--end comment--></td>  
    </TR><!-- Week of 5/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
