--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -363,19 +363,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Symmetric-key and public-key cryptography<!--end comment--></td>  
    </TR><!-- Week of 5/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0501.pdf"><!-- -->
 	  5/01<!-- --></a><!-- --><br><!-- -><a href=
       "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0503.pdf"><!-- -->
-      5/03<!-- --></a><!-- --><br><!-- -><a href=
+      5/03<!-- -></a><!-- --><br><!-- -><a href=
       "https://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0505.pdf"><!-- -->
-      5/05<!-- --</a><!-- --></td>
+      5/05<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=6mWogwz0NbQ">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=vagKFvr3mRs">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=0mxoB_Kgqo4">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Private key authentication, Diffie-Hellman, hash functions, side attacks<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Last day of class.  "Assessment Activity"</font><!--end comment--></td>  
   </TR><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -End of table --- -->
