--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   4/29/2023 8:34 pm)
+                              >(Last update:   4/29/2023 8:42 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -89,8 +89,8 @@ PS                                                       </small>
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
         4/28
    <!-- Due -->             </TD><TD align="center" valign="top">
-        5/05<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/32131362"
+        <a href=
+		"https://dordt.instructure.com/courses/3642167/assignments/41031924"
 		>5/05</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
