--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/22/2023 8:50 pm) 
+                              >(Last update: 5/01/2023 10:07 pm) 
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -80,6 +80,29 @@ DO {
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+
+   <!-- PS#  -->                  <TD align="right" valign="top">
+13
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        5/01
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href=
+		"https://dordt.instructure.com/courses/3642050/assignments/41045435"
+		>5/05</a>
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/102797306/download?download_frd=1"
+        >2/14</a>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+Read the classroom slides on security.      <br>&nbsp; 
+                                                       <br>&nbsp;
+                                         <br>&nbsp;
+                                                       <br>&nbsp;
+        Do <a href="./EGR304S23PS13_CompressionEncryptionProblem.docx"
+		><DO>3.1, 3.2 and 2.3</DO></a> (click blue link).        
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
