--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -365,18 +365,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/260772035/download?download_frd=1"><!-- -->
-	  5/01<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      5/03<!-- -></a><!-- --><br><!-- -><a href=
+	  5/01<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/260948766/download?download_frd=1"><!-- -->
+      5/03<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       5/05<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=vagKFvr3mRs">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=0mxoB_Kgqo4">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=jHjNepUHzLw">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Private key authentication, Diffie-Hellman, hash functions, side attacks<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Message brokering, MQTT, JSON, Func sep within code via state mach.<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Last day of class.  "Assessment Activity"</font><!--end comment--></td>  
   </TR><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -End of table --- -->
 </TABLE></p>
