--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -364,18 +364,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/260757177/download?download_frd=1"><!-- -->
-	  5/01<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  5/01<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/260935884/download?download_frd=1"><!-- -->
       5/03<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       5/05<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=ptrZpnYSRkM">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=0mxoB_Kgqo4">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=AhYsrYq6u6E">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Defn of Random variable, CDF, PDF, Important types of random variables<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->nCr, nPr, w/replacement, Random Variables as models of systems<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Last day of class.  "Assessment Activity"</font><!--end comment--></td>  
   </TR><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -End of table --- -->
 </TABLE></p>
