EGR322F20 and EGR323S21 published publically 	modified:   F20/322F20.HTM 	modified:   S21/323S21.HTM

--- a/F20/322F20.HTM
+++ b/F20/322F20.HTM
@@ -89,9 +89,13 @@ border="0"></A><br>
         Includes course catalog description,                 <br> 
           textbook information, grade weights, etc.           </P> 
 
-                               <P style="text-align: center;"><A target="_top" 
+                  <P style="text-align: center;"><A target="_top" 
                     HREF="../errata/Sedra_Smith/8th/S_S_8_ER.HTM"
                      >Textbook Errata</A>                    </P> 
+					 
+				 <P style="text-align: center;"><A target="_top">
+	   	   <a href="322/322F20DN_Infinity.HTM"
+		   >Slides and videos for each class period</a>      </P>
 
          <P style="text-align: center;"><A target="_top" HREF = "https://dfdeboer.github.io/index.html"
               >Professor De Boer's Homepage</A>.             </P>
