--- a/S21/323S21.HTM
+++ b/S21/323S21.HTM
@@ -89,6 +89,10 @@ border="0"></A><br>
         Includes course catalog description,                 <br> 
           textbook information, grade weights, etc.           </P> 
 
+				 <P style="text-align: center;"><A target="_top">
+	   	   <a href="323/323S21DN_Infinity.HTM"
+		   >Slides and videos for each class period</a>      </P>
+
                                <P style="text-align: center;"><A target="_top" 
                     HREF="../errata/Sedra_Smith/8th/S_S_8_ER.HTM"
                      >Textbook Errata</A>                    </P> 
