update visitor's guide 	modified:   F20/322F20.HTM 	modified:   S21/323S21.HTM 	modified:   VG.HTM

--- a/F20/322F20.HTM
+++ b/F20/322F20.HTM
@@ -95,7 +95,8 @@ border="0"></A><br>
 					 
 				 <P style="text-align: center;"><A target="_top">
 	   	   <a href="322/322F20DN_Infinity.HTM"
-		   >Slides and videos for each class period</a>      </P>
+		   >Slides and videos for each class period</a>      <br>
+Please read Professor De Boer's <a href="../VG.HTM">Visitor's Guide</a></P>
 
          <P style="text-align: center;"><A target="_top" HREF = "https://dfdeboer.github.io/index.html"
               >Professor De Boer's Homepage</A>.             </P>
