--- a/S21/323S21.HTM
+++ b/S21/323S21.HTM
@@ -91,7 +91,8 @@ border="0"></A><br>
 
 				 <P style="text-align: center;"><A target="_top">
 	   	   <a href="323/323S21DN_Infinity.HTM"
-		   >Slides and videos for each class period</a>      </P>
+		   >Slides and videos for each class period</a>      <br>
+Please read Professor De Boer's <a href="../VG.HTM">Visitor's Guide</a></P>
 
                                <P style="text-align: center;"><A target="_top" 
                     HREF="../errata/Sedra_Smith/8th/S_S_8_ER.HTM"
