fix a missing </i> in visitor's guide. 	modified:   VG.HTM

--- a/VG.HTM
+++ b/VG.HTM
@@ -58,7 +58,7 @@ like the course shown below.<br>
 <img src="Canvas_common/TypicalPublicPortal.png"><br>
 <i>A typical "Public Portal" for one of Professor De Boer's courses.<br>
 All links in the above illustration are dead.  Use the URL
-that got you to this page to get live links.</p><p>
+that got you to this page to get live links.</i></p><p>
 
 <b>YOUR FIRST DAY AT CLASS</b><br>
 You might like to dive right into the first lecture of 
